Introduce debug mode flag, print a summary and improve logging